# clothing-crm

./: .env.prod.example  .gitignore  .gitlab-ci.full.yml  .gitlab-ci.yml  .pre-commit-config.yaml  BENCHMARKS.md  DEPLOY.md  Makefile  README.md  ROADMAP.md  docker-compose.deploy.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_06_05_0203-0adec147124e_auth_rbac.py  2026_06_05_0222-efea6be48aad_hr_module.py  2026_06_05_0253-1c45193d7657_catalog_module.py  2026_06_05_0315-844f1a9edaff_warehouse_module.py  2026_06_05_0333-15703317ab68_customer_module.py  2026_06_05_0411-523367a9a019_sales_module.py  2026_06_05_0902-46eee286c0e7_procurement_module.py  2026_06_05_0931-ed3249a64e76_finance_module.py  2026_06_05_1002-c1e9c4b3fdcb_notifications.py  2026_06_05_1900-d4e7a2c8f3b1_indexes_perf.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  router.py
backend/app/api/v1/catalog/: __init__.py  brands.py  categories.py  products.py  upload.py  variants.py
backend/app/api/v1/customers/: __init__.py  balance.py  contacts.py  customers.py  interactions.py
backend/app/api/v1/finance/: __init__.py  accounts.py  debts.py  payments.py
backend/app/api/v1/hr/: __init__.py  audit.py  departments.py  employees.py  positions.py
backend/app/api/v1/notifications/: __init__.py  rest.py  websocket.py
backend/app/api/v1/procurement/: __init__.py  purchase_orders.py  suppliers.py
backend/app/api/v1/sales/: __init__.py  invoices.py  orders.py  returns.py
backend/app/api/v1/users/: __init__.py  roles.py  users.py
backend/app/api/v1/warehouse/: __init__.py  inventory.py  movements.py  stock.py  warehouses.py
backend/app/core/: config.py  logging.py  redis.py  security.py  sentry.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  account.py  activity_log.py  associations.py  attribute_value.py  brand.py  category.py  customer.py  customer_contact.py  customer_interaction.py  debt_record.py  department.py  employee.py  finance_payment.py  inventory.py  invoice.py  notification.py  order.py  order_item.py  order_return.py  payment.py  permission.py  position.py  product.py  product_variant.py  purchase_item.py  purchase_order.py  role.py  stock.py  stock_movement.py  supplier.py  supplier_payment.py  user.py  warehouse.py
backend/app/schemas/: __init__.py  account.py  activity_log.py  attribute_value.py  auth.py  brand.py  category.py  customer.py  customer_balance.py  customer_contact.py  customer_interaction.py  debt_record.py  department.py  employee.py  finance_payment.py  inventory.py  invoice.py  notification.py  order.py  order_return.py  payment.py  position.py  product.py  product_variant.py  purchase_order.py  stock.py  supplier.py  user.py  warehouse.py
backend/app/scripts/: seed_rbac.py
backend/app/services/: audit.py  catalog.py  customer.py  finance.py  notify.py  order.py  purchase.py  stock.py
backend/app/tasks/: celery_app.py
backend/app/utils/: pagination.py
backend/tests/: conftest.py  factories.py  test_auth_endpoints.py  test_auth_models.py  test_catalog_endpoints.py  test_customers_endpoints.py  test_db_base.py  test_factories.py  test_finance_endpoints.py  test_health.py  test_hr_endpoints.py  test_notifications.py  test_order_endpoints.py  test_order_state_machine.py  test_pagination.py  test_purchase_endpoints.py  test_security.py  test_service_gaps.py  test_users_endpoints.py  test_warehouse_endpoints.py
frontend/: .dockerignore  .env.example  Dockerfile  components.json  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
infra/: .gitignore
nginx/: nginx.conf
screenshots/: _render.py  manifest.md
scripts/: backup-db.sh  (+2 more)
(+73 files in other folders)
